--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 // For those who want the bleeding edge
 buildscript {
     repositories {
@@ -21,8 +20,8 @@ plugins {
 }
 */
 version = "1.1"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group= "com.murdermystery.helper" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "MurderMysteryHelper"
 
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
@@ -80,3 +79,13 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
+// Custom task to copy the built mod to Feather client's user-mods directory
+task copyToFeather(type: Copy) {
+    from file("$buildDir/libs")
+    into file('C:/Users/mitch/AppData/Roaming/.feather/user-mods/1.8.9')
+    include '*.jar'
+}
+
+// Make the copy task run after the build task
+build.finalizedBy copyToFeather
